# services/http/docs/swagger.json
@@ -32,7 +32,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/handlers.SuccessResponse"
+                                    "$ref": "#/definitions/handlers.APIResponse"
                                 },
                                 {
                                     "type": "object",
@@ -48,13 +48,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/handlers.ErrorResponse"
+                            "$ref": "#/definitions/handlers.APIResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/handlers.ErrorResponse"
+                            "$ref": "#/definitions/handlers.APIResponse"
                         }
                     }
                 }
@@ -86,7 +86,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/handlers.SuccessResponse"
+                                    "$ref": "#/definitions/handlers.APIResponse"
                                 },
                                 {
                                     "type": "object",
@@ -120,13 +120,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/handlers.ErrorResponse"
+                            "$ref": "#/definitions/handlers.APIResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/handlers.ErrorResponse"
+                            "$ref": "#/definitions/handlers.APIResponse"
                         }
                     }
                 }
@@ -149,7 +149,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/handlers.SuccessResponse"
+                                    "$ref": "#/definitions/handlers.APIResponse"
                                 },
                                 {
                                     "type": "object",
@@ -165,13 +165,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/handlers.ErrorResponse"
+                            "$ref": "#/definitions/handlers.APIResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/handlers.ErrorResponse"
+                            "$ref": "#/definitions/handlers.APIResponse"
                         }
                     }
                 }
@@ -203,7 +203,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/handlers.SuccessResponse"
+                                    "$ref": "#/definitions/handlers.APIResponse"
                                 },
                                 {
                                     "type": "object",
@@ -219,19 +219,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/handlers.ErrorResponse"
+                            "$ref": "#/definitions/handlers.APIResponse"
                         }
                     },
                     "409": {
                         "description": "Conflict",
                         "schema": {
-                            "$ref": "#/definitions/handlers.ErrorResponse"
+                            "$ref": "#/definitions/handlers.APIResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/handlers.ErrorResponse"
+                            "$ref": "#/definitions/handlers.APIResponse"
                         }
                     }
                 }
@@ -239,28 +239,20 @@
         }
     },
     "definitions": {
-        "handlers.BlankStruct": {
-            "type": "object"
-        },
-        "handlers.ErrorResponse": {
+        "handlers.APIResponse": {
             "type": "object",
             "properties": {
                 "code": {
                     "type": "integer"
                 },
+                "data": {},
                 "message": {
                     "type": "string"
                 }
             }
         },
-        "handlers.SuccessResponse": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "integer"
-                },
-                "data": {}
-            }
+        "handlers.BlankStruct": {
+            "type": "object"
         },
         "users.GenerateUserAccessTokenDTO": {
             "type": "object",
